--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -463,7 +463,7 @@
   "In response to a complaint we received under the US Digital Millennium Copyright Act, we have blocked access to this channel from our applications. Content may also be blocked due to DMCA Red Flag rules which are obvious copyright violations we come across, are discussed in public channels, or reported to us.": "In response to a complaint we received under the US Digital Millennium Copyright Act, we have blocked access to this channel from our applications. Content may also be blocked due to DMCA Red Flag rules which are obvious copyright violations we come across, are discussed in public channels, or reported to us.",
   "Read More": "Read More",
   "Read more": "Read more",
-  "Multi-language support is brand new and incomplete. Switching your language may have unintended consequences, like glossolalia.": "Multi-language support is brand new and incomplete. Switching your language may have unintended consequences, like glossolalia.",
+  "Multi-language support is community-driven and may be incomplete for some languages. Switching your language may have unintended consequences, like glossolalia.": "Multi-language support is community-driven and may be incomplete for some languages. Switching your language may have unintended consequences, like glossolalia.",
   "Tailor your experience.": "Tailor your experience.",
   "Dark": "Dark",
   "light": "light",
@@ -1322,6 +1322,7 @@
   "Wild West": "Wild West",
   "View More": "View More",
   "Sync YouTube Channel": "Sync YouTube Channel",
+  "Careers": "Careers",
   "Terms": "Terms",
   "Privacy Policy": "Privacy Policy",
   "Cookie Settings": "Cookie Settings",
@@ -1387,6 +1388,7 @@
   "Hide replies": "Hide replies",
   "Commenting...": "Commenting...",
   "Reply": "Reply",
+  "Reply --[verb, reply to a comment]--": "Reply",
   "Replying...": "Replying...",
   "Continue Thread": "Continue Thread",
   "View all comments": "View all comments",
@@ -1659,6 +1661,9 @@
   "Nothing found here. Like big tech ethics.": "Nothing found here. Like big tech ethics.",
   "Level %current_level%": "Level %current_level%",
   "Creator tools": "Creator tools",
+  "Switch channel": "Switch channel",
+  "That's one of your channels...": "That's one of your channels...",
+  "That's you...": "That's you...",
   "Prevent this channel from interacting with you.": "Prevent this channel from interacting with you.",
   "Choose a permanent or temporary ban.": "Choose a permanent or temporary ban.",
   "Personal | Moderator | Admin": "Personal | Moderator | Admin",
@@ -2216,6 +2221,8 @@
   "Started %time_date%": "Started %time_date%",
   "Live %time_date%": "Live %time_date%",
   "Toggle Timestamps": "Toggle Timestamps",
+  "Disable Compact Mode": "Disable Compact Mode",
+  "Enable Compact Mode": "Enable Compact Mode",
   "Chat as": "Chat as",
   "Streamer": "Streamer",
   "Pinned": "Pinned",
@@ -2440,5 +2447,13 @@
   "You have preordered this content": "You have preordered this content",
   "You cannot preorder your own content": "You cannot preorder your own content",
   "You cannot purchase your own content": "You cannot purchase your own content",
+  "Emotes": "Emotes",
+  "Activities": "Activities",
+  "Animals & Nature": "Animals & Nature",
+  "Flags": "Flags",
+  "Food & Drink": "Food & Drink",
+  "Hand signals": "Hand signals",
+  "Smilies": "Smilies",
+  "Symbols": "Symbols",
   "--end--": "--end--"
 }
