--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.6.2",
+    "@sentry/react": "^7.8.1",
+    "@sentry/tracing": "^7.8.1",
     "@silvermine/videojs-airplay": "^1.1.0",
     "@silvermine/videojs-chromecast": "^1.3.3",
     "@ungap/from-entries": "^0.2.1",
@@ -107,7 +109,6 @@
     "@reach/tabs": "^0.1.5",
     "@reach/tooltip": "^0.12.1",
     "@reach/utils": "^0.12.1",
-    "@sentry/browser": "^5.12.1",
     "@sentry/webpack-plugin": "^1.10.0",
     "@types/three": "^0.103.2",
     "adm-zip": "^0.4.13",
