ENABLE_PREROLL_ADS=false

--- a/.env.defaults
+++ b/.env.defaults
@@ -101,7 +101,7 @@ ENABLE_COMMENT_REACTIONS=true
 ENABLE_CREATOR_REACTIONS=true
 ENABLE_FILE_REACTIONS=true
 ENABLE_NO_SOURCE_CLAIMS=true
-ENABLE_PREROLL_ADS=true
+ENABLE_PREROLL_ADS=false
 LIGHTHOUSE_DEFAULT_TYPES=audio,video
 WEB_PUBLISH_SIZE_LIMIT_GB=4
 
