--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2437,8 +2437,8 @@
   "Purchase your content for %currency%%amount%": "Purchase your content for %currency%%amount%",
   "Pre-order your content for %currency%%amount%": "Pre-order your content for %currency%%amount%",
   "Add a card --[replaces add_a_card]--" : "Add a card",
-  "%add_a_card% to purchase content.": "%add_a_card% to purchase content.",
-  "%add_a_card% to preorder content.": "%add_a_card% to preorder content.",
+  "%add_a_card% to purchase content.": "%add_a_card% to purchase content",
+  "%add_a_card% to preorder content.": "%add_a_card% to preorder content",
   "This content can be purchased for %currency%%amount%": "This content can be purchased for %currency%%amount%",
   "Thanks for purchasing, enjoy your content!": "Thanks for purchasing, enjoy your content!",
   "This content is now available, click here to view it": "This content is now available, click here to view it",
@@ -2447,6 +2447,7 @@
   "You have preordered this content": "You have preordered this content",
   "You cannot preorder your own content": "You cannot preorder your own content",
   "You cannot purchase your own content": "You cannot purchase your own content",
+  "Creator cannot receive payments yet": "Creator cannot receive payments yet",
   "Emotes": "Emotes",
   "Activities": "Activities",
   "Animals & Nature": "Animals & Nature",
