--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "formik": "^0.10.4",
     "hast-util-sanitize": "^3.0.2",
     "history": "^4.9.0",
+    "hook-shell-script-webpack-plugin": "^0.1.4",
     "husky": "^3.1.0",
     "imagesloaded": "^4.1.4",
     "json-loader": "^0.5.4",
