Paginate collection_list
## Issue
An account with 600 public playlists takes ~40s to fetch.

## Change
- Add a spinner to indicate the busy job.
- While pagination of `collection_list` is not crucial to fix the issue, it does seem to alleviate things a little (less stutter and doesn't kill dev-tools data) and potentially avoid a timeout.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2361,6 +2361,7 @@
   "Queue": "Queue",
   "Your Playlists": "Your Playlists",
   "Default Playlists": "Default Playlists",
+  "Fetching playlists. This may take a while...": "Fetching playlists. This may take a while...",
   "Open": "Open",
   "Support this content": "Support this content",
   "Repost this content": "Repost this content",
