Follow-Manage: don't hide blocked & muted channels
Ticket: 2045

An oversight when re-implementing that page -- a "manage" page should always show full/raw list to allow removals.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -727,6 +727,7 @@
   "Autocomplete": "Autocomplete",
   "Followed Tags": "Followed Tags",
   "Followed Channels": "Followed Channels",
+  "No followed channels.": "No followed channels.",
   "Manage Tags": "Manage Tags",
   "%selectTagsLabel% (%number% left)": "%selectTagsLabel% (%number% left)",
   "Matching": "Matching",
