--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1587,6 +1587,9 @@
   "Sign up to earn %lbc% for you and your favorite creators.": "Sign up to earn %lbc% for you and your favorite creators.",
   "Short (< 4 minutes)": "Short (< 4 minutes)",
   "Long (> 20 min)": "Long (> 20 min)",
+  "Longer than": "Longer than",
+  "Shorter than": "Shorter than",
+  "Minutes": "Minutes",
   "Results boosted by %lbc%": "Results boosted by %lbc%",
   "Learn more about Credits on %DOMAIN%": "Learn more about Credits on %DOMAIN%",
   "Uploaded image will be visible in a few minutes after you submit this form.": "Uploaded image will be visible in a few minutes after you submit this form.",
