--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@sentry/tracing": "^7.8.1",
     "@silvermine/videojs-airplay": "^1.1.0",
     "@silvermine/videojs-chromecast": "^1.3.3",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.35.0",
     "@ungap/from-entries": "^0.2.1",
     "auto-launch": "^5.0.5",
     "core-js-pure": "^3.19.3",
