--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-datetime-picker": "^3.4.3",
     "react-plastic": "^1.1.1",
     "react-top-loading-bar": "^2.0.1",
+    "redux-state-sync": "^3.1.4",
     "remove-markdown": "^0.3.0",
     "rss": "^1.2.2",
     "source-map-explorer": "^2.5.2",
