Disable broken ad

--- a/.env.defaults
+++ b/.env.defaults
@@ -64,7 +64,7 @@ BRANDED_SITE=odysee
 SIMPLE_SITE=false
 ENABLE_WILD_WEST=true
 CUSTOM_HOMEPAGE=false
-SHOW_ADS=true
+SHOW_ADS=false
 ENABLE_MATURE=false
 ENABLE_UI_NOTIFICATIONS=true
 #SHOW_TAGS_INTRO=false
