--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "source-map-explorer": "^2.5.2",
     "sudo-prompt": "^9.2.1",
     "tempy": "^0.6.0",
+    "videojs-flvh265": "^1.0.8",
     "videojs-logo": "^2.1.4"
   },
   "devDependencies": {
@@ -125,7 +126,7 @@
     "dom-scroll-into-view": "^1.2.1",
     "dotenv-defaults": "^2.0.1",
     "dotenv-webpack": "^1.8.0",
-    "electron": "15.5.5",
+    "electron": "20.0.0",
     "electron-builder": "^22.10.5",
     "electron-devtools-installer": "^3.1.1",
     "electron-is-dev": "^0.3.0",
