FilePage: handle display of filtered content (#2125)
Ticket: 1945

## Approach
Only show the following message ...

```
lbry://@xxx#6/xxx#f
This content violates the terms and conditions of Odysee and has been filtered.
```

... and block all buttons and widgets. If the user wants to delete, they can do so from the Uploads Page.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -461,6 +461,7 @@
   "Decrease amount to account for transaction fee": "Decrease amount to account for transaction fee",
   "You have %credit_amount% in unclaimed rewards.": "You have %credit_amount% in unclaimed rewards.",
   "In response to a complaint we received under the US Digital Millennium Copyright Act, we have blocked access to this channel from our applications. Content may also be blocked due to DMCA Red Flag rules which are obvious copyright violations we come across, are discussed in public channels, or reported to us.": "In response to a complaint we received under the US Digital Millennium Copyright Act, we have blocked access to this channel from our applications. Content may also be blocked due to DMCA Red Flag rules which are obvious copyright violations we come across, are discussed in public channels, or reported to us.",
+  "This content violates the terms and conditions of Odysee and has been filtered.": "This content violates the terms and conditions of Odysee and has been filtered.",
   "Read More": "Read More",
   "Read more": "Read more",
   "Multi-language support is community-driven and may be incomplete for some languages. Switching your language may have unintended consequences, like glossolalia.": "Multi-language support is community-driven and may be incomplete for some languages. Switching your language may have unintended consequences, like glossolalia.",
