Allow users to opt-in to syncing Homepage order to Sidebar

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2219,6 +2219,7 @@
   "Scheduled streams hidden, you can re-enable them in settings.": "Scheduled streams hidden, you can re-enable them in settings.",
   "Customize Homepage": "Customize Homepage",
   "Customize --[Short label for \"Customize Homepage\"]--": "Customize",
+  "Also apply to sidebar": "Also apply to sidebar",
   "This is currently an early-access feature for Premium members.": "This is currently an early-access feature for Premium members.",
   "Sort and customize your homepage": "Sort and customize your homepage",
   "Clean as a whistle! --[title for empty homepage]--": "Clean as a whistle!",
