--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2318,5 +2318,21 @@
   "Odysee Connect --[Section in Help Page]--": "Odysee Connect",
   "Your hub has blocked this content because it subscribes to the following blocking channel:": "Your hub has blocked this content because it subscribes to the following blocking channel:",
   "Your hub has blocked access to this content do to a complaint received under the US Digital Millennium Copyright Act.": "Your hub has blocked access to this content do to a complaint received under the US Digital Millennium Copyright Act.",
+  "Creator Comment settings": "Creator Comment settings",
+  "Remote Sync Settings": "Remote Sync Settings",
+  "Wallet Sync": "Wallet Sync",
+  "Manage cross device sync for your wallet": "Manage cross device sync for your wallet",
+  "With your email and wallet encryption password, we will register you with sync. If your wallet is not currentlyencrypted, it will be after this. Bitch.": "With your email and wallet encryption password, we will register you with sync. If your wallet is not currentlyencrypted, it will be after this. Bitch.",
+  "Password Again": "Password Again",
+  "Enter Email": "Enter Email",
+  "Sign up": "Sign up",
+  "Let's get you set up. This will require you to encrypt your wallet and remember your password.": "Let's get you set up. This will require you to encrypt your wallet and remember your password.",
+  "Sign in to your sync account. Or %sign_up%.": "Sign in to your sync account. Or %sign_up%.",
+  "Sign up for a sync account. Or %sign_in%.": "Sign up for a sync account. Or %sign_in%.",
+  "Verifying": "Verifying",
+  "We have sent you an email to verify your account.": "We have sent you an email to verify your account.",
+  "Doing Math": "Doing Math",
+  "Hold on, doing some math.": "Hold on, doing some math.",
+  "You are signed in as %email%.": "You are signed in as %email%.",
   "--end--": "--end--"
 }
