--- a/package.json
+++ b/package.json
@@ -192,6 +192,7 @@
     "semver": "^5.3.0",
     "strip-markdown": "^3.0.3",
     "style-loader": "^0.23.1",
+    "tape": "^5.6.0",
     "terser-webpack-plugin": "^4.2.3",
     "three-full": "^28.0.2",
     "unist-util-visit": "^2.0.3",
