Remove unused dependencies.

--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@hot-loader/react-dom": "^16.13",
     "@meetfranz/electron-cookies": "^3.0.2",
     "@mui/material": "^5.2.1",
-    "@reach/auto-id": "^0.13.0",
     "@reach/combobox": "^0.12.1",
     "@reach/menu-button": "0.8.6",
     "@reach/rect": "^0.16.0",
@@ -58,20 +57,17 @@
     "@sentry/browser": "^5.12.1",
     "@ungap/from-entries": "^0.2.1",
     "adm-zip": "^0.4.13",
-    "async-exit-hook": "^2.0.1",
     "auto-launch": "^5.0.5",
-    "bluebird": "^3.5.1",
     "chalk": "^4.1.0",
     "classnames": "^2.2.5",
     "codemirror": "^5.39.2",
-    "concurrently": "^4.1.2",
     "connected-react-router": "^6.8.0",
     "country-data": "^0.0.31",
     "crypto-js": "^4.0.0",
+    "css-doodle": "^0.7.1",
     "dat.gui": "^0.7.2",
     "decompress": "^4.2.1",
     "del": "^3.0.0",
-    "dom-scroll-into-view": "^1.2.1",
     "dotenv-defaults": "^2.0.1",
     "electron-dl": "^3.2.0",
     "electron-log": "^4.4.8",
@@ -90,10 +86,8 @@
     "match-sorter": "^6.3.0",
     "mime": "^3.0.0",
     "moment": "^2.29.2",
-    "node-abi": "^2.5.1",
     "node-fetch": "^2.6.7",
     "node-html-parser": "^5.1.0",
-    "node-libs-browser": "^2.1.0",
     "node-wget": "^0.4.3",
     "parse-duration": "^1.0.0",
     "prop-types": "^15.6.2",
@@ -104,7 +98,6 @@
     "react": "^16.8.2",
     "react-awesome-lightbox": "^1.7.3",
     "react-beautiful-dnd": "^13.1.0",
-    "react-confetti": "^4.0.1",
     "react-datetime-picker": "^3.4.3",
     "react-dom": "^16.8.2",
     "react-draggable": "^3.3.0",
@@ -116,7 +109,6 @@
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-simplemde-editor": "^4.1.3",
-    "react-spring": "^8.0.20",
     "reakit": "^1.0.0-beta.13",
     "redux": "^3.6.0",
     "redux-persist": "^5.10.0",
@@ -131,22 +123,16 @@
     "remark-react": "^8.0.0",
     "reselect": "^4.0.0",
     "semver": "^5.3.0",
-    "source-map-explorer": "^2.5.2",
-    "stream-to-blob-url": "^2.1.1",
     "strip-markdown": "^3.0.3",
     "sudo-prompt": "^9.2.1",
     "tempy": "^0.6.0",
     "three-full": "^28.0.2",
-    "tiny-relative-date": "^1.3.0",
-    "tree-kill": "^1.1.0",
     "unist-util-visit": "^2.0.3",
     "uuid": "^8.3.2",
     "video.js": "^7.14.3",
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-event-tracking": "^1.0.1",
-    "villain-react": "^1.0.9",
-    "wavesurfer.js": "^2.2.1",
-    "y18n": "^4.0.1"
+    "villain-react": "^1.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -171,7 +157,6 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^7.0.3",
-    "css-doodle": "^0.7.1",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.10",
     "devtron": "^1.4.0",
@@ -212,6 +197,7 @@
     "raw-loader": "^2.0.0",
     "sass": "^1.29.0",
     "sass-loader": "^7.1.0",
+    "source-map-explorer": "^2.5.2",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^4.2.3",
     "webpack": "^4.44.2",
