Port membership strings for earlier translation

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -894,8 +894,10 @@
   "You are not able to see this channel's stats. Make sure you are signed in with the correct email and have data sharing turned on.": "You are not able to see this channel's stats. Make sure you are signed in with the correct email and have data sharing turned on.",
   "Sign Up": "Sign Up",
   "Add A Password": "Add A Password",
+  "Hide members-only content": "Hide members-only content",
   "Hide reposts": "Hide reposts",
   "You will not see reposts by people you follow or receive email notifying about them.": "You will not see reposts by people you follow or receive email notifying about them.",
+  "You will not see content that requires a membership subscription.": "You will not see content that requires a membership subscription.",
   "Sorry, your request timed out. Modify your options or %again%": "Sorry, your request timed out. Modify your options or %again%",
   "Sorry, your request timed out. Try refreshing in a bit.": "Sorry, your request timed out. Try refreshing in a bit.",
   "Pause at any time to select a thumbnail from your video": "Pause at any time to select a thumbnail from your video",
@@ -2470,5 +2472,90 @@
   "Do you want to proceed with signing out?": "Do you want to proceed with signing out?",
   "Multiple tags can be added by separating them with a comma.\nExample: sports,news,tv": "Multiple tags can be added by separating them with a comma.\nExample: sports,news,tv",
   "Search tags": "Search tags",
+  "Memberships": "Memberships",
+  "Donor Portal": "Donor Portal",
+  "Find creators you like and support them.": "Find creators you like and support them.",
+  "Enter Donor Portal": "Enter Donor Portal",
+  "Membership Portal": "Membership Portal",
+  "Create memberships and have users subscribe to them to support you.": "Create memberships and have users subscribe to them to support you.",
+  "Manage Memberships": "Manage Memberships",
+  "Help Hub": "Help Hub",
+  "What are Memberships? Lady Fungus can explain it in the %help_hub%.": "What are Memberships? Lady Fungus can explain it in the %help_hub%.",
+  "Back To Memberships": "Back To Memberships",
+  "Choose what channel to manage tiers for": "Choose what channel to manage tiers for",
+  "What are these donations? Lady Fungus can explain it in the %help_hub%.": "What are these donations? Lady Fungus can explain it in the %help_hub%.",
+  "Membership": "Membership",
+  "You are a \"%membership_tier_name%\" member": "You are a \"%membership_tier_name%\" member",
+  "Odysee Perks": "Odysee Perks",
+  "This membership will renew on %renewal_date%": "This membership will renew on %renewal_date%",
+  "Confirm %membership_name% Cancellation": "Confirm %membership_name% Cancellation",
+  "Are you sure you want to cancel your %creator_name%'s \"%membership_name%\" membership? You will still have all your features until %end_date% at which point your purchase will not be renewed and you will lose access to your membership features and perks.": "Are you sure you want to cancel your %creator_name%'s \"%membership_name%\" membership? You will still have all your features until %end_date% at which point your purchase will not be renewed and you will lose access to your membership features and perks.",
+  "Your membership was successfully cancelled and will no longer be renewed.": "Your membership was successfully cancelled and will no longer be renewed.",
+  "Your cancelled membership will end on %end_date%": "Your cancelled membership will end on %end_date%",
+  "Creator Memberships": "Creator Memberships",
+  "Creator Portal": "Creator Portal",
+  "My Supporters": "My Supporters",
+  "My Tiers": "My Tiers",
+  "Choose what channel to list supporters for": "Choose what channel to list supporters for",
+  "Preview your tiers": "Preview your tiers",
+  "See Your Memberships": "See Your Memberships",
+  "Total Supporters:": "Total Supporters:",
+  "Total Monthly Income:": "Total Monthly Income:",
+  "Total Received:": "Total Received:",
+  "Channel Name": "Channel Name",
+  "Supporters": "Supporters",
+  "Estimated Monthly Income": "Estimated Monthly Income",
+  "Total Received": "Total Received",
+  "Page": "Page",
+  "Want to increase your channel growth? Spaceman has whipped up some marketing concepts in the %help_hub%.": "Want to increase your channel growth? Spaceman has whipped up some marketing concepts in the %help_hub%.",
+  "Page location copied": "Page location copied",
+  "Tier": "Tier",
+  "Joined On": "Joined On",
+  "Months Supporting": "Months Supporting",
+  "Add Tier for %channel_name%": "Add Tier for %channel_name%",
+  "Need some ideas on what tiers to make? Ms. H.264 has lots of ideas in the %help_hub%.": "Need some ideas on what tiers to make? Ms. H.264 has lots of ideas in the %help_hub%.",
+  "Edit Tier": "Edit Tier",
+  "Delete Tier": "Delete Tier",
+  "Pledge": "Pledge",
+  "Description ": "Description ",
+  "Become A Member": "Become A Member",
+  "Manage Your Membership Tiers": "Manage Your Membership Tiers",
+  "Signup for $%membership_price% a month": "Signup for $%membership_price% a month",
+  "Perks": "Perks",
+  "Subscribing As": "Subscribing As",
+  "Subscribing To": "Subscribing To",
+  "Membership Tier": "Membership Tier",
+  "Monthly Cost": "Monthly Cost",
+  "Features and Perks": "Features and Perks",
+  "Processing payment...": "Processing payment...",
+  "You are now a '%membership_tier_name%' member for %creator_channel_name%, enjoy the perks and special features!": "You are now a '%membership_tier_name%' member for %creator_channel_name%, enjoy the perks and special features!",
+  "Membership Options": "Membership Options",
+  "Join Membership": "Join Membership",
+  "Support %channel_title% with a monthly membership subscription to help and receive exclusive features.": "Support %channel_title% with a monthly membership subscription to help and receive exclusive features.",
+  "Failed to fetch channel list.": "Failed to fetch channel list.",
+  "You don't have any Tiers": "You don't have any Tiers",
+  "To be able to begin receiving payments you have to add at least 1 Tier to your channel.": "To be able to begin receiving payments you have to add at least 1 Tier to your channel.",
+  "Add a Tier": "Add a Tier",
+  "Channel Has No Memberships": "Channel Has No Memberships",
+  "Unfortunately you haven't activated your memberships functionality for this channel yet, but you can do so now at the link below.": "Unfortunately you haven't activated your memberships functionality for this channel yet, but you can do so now at the link below.",
+  "Create Memberships For %channel_name%": "Create Memberships For %channel_name%",
+  "Example Plan": "Example Plan",
+  "Tier Name": "Tier Name",
+  "Tier Description": "Tier Description",
+  "Description of your tier": "Description of your tier",
+  "Monthly Contribution ($/Month)": "Monthly Contribution ($/Month)",
+  "Save Tier": "Save Tier",
+  "A membership description is required.": "A membership description is required.",
+  "This channel has no supporters yet": "This channel has no supporters yet",
+  "Once you have supporters, they will appear here.": "Once you have supporters, they will appear here.",
+  "You're not able to signup for your own memberships": "You're not able to signup for your own memberships",
+  "Please %activate_your_memberships% first to to use this functionality.": "Please %activate_your_memberships% first to to use this functionality.",
+  "activate your memberships": "activate your memberships",
+  "Restrict Content": "Restrict Content",
+  "Restrict content to only allow subscribers to certain memberships to view it": "Restrict content to only allow subscribers to certain memberships to view it",
+  "You selected to restrict this content but didn't choose any memberships, please choose a membership tier to restrict, or uncheck the restriction box": "You selected to restrict this content but didn't choose any memberships, please choose a membership tier to restrict, or uncheck the restriction box",
+  "No supporters yet": "No supporters yet",
+  "Unfortunately, this creator hasn't activated their membership functionality yet, but you can create your own tiers with the link below!": "Unfortunately, this creator hasn't activated their membership functionality yet, but you can create your own tiers with the link below!",
+  "Create Your Memberships": "Create Your Memberships",
   "--end--": "--end--"
 }
