(patch) Port membership strings for earlier translation

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2557,5 +2557,10 @@
   "No supporters yet": "No supporters yet",
   "Unfortunately, this creator hasn't activated their membership functionality yet, but you can create your own tiers with the link below!": "Unfortunately, this creator hasn't activated their membership functionality yet, but you can create your own tiers with the link below!",
   "Create Your Memberships": "Create Your Memberships",
+  "You need to link a credit card in order to purchase.": "You need to link a credit card in order to purchase.",
+  "Take me there": "Take me there",
+  "Only channel members with \"Members-only chat\" perk can participate in public livestream chats.": "Only channel members with \"Members-only chat\" perk can participate in public livestream chats.",
+  "Cancel membership": "Cancel membership",
+  "Cancel Membership": "Cancel Membership",
   "--end--": "--end--"
 }
