Publish:  Always show the Cancel/Remove button
The only scenario that we are hiding the button is right after `notify` is sent. For all other scenarios, including F5, we show it to allow users to clear the upload.

Since there was confusion lately, just always show it for all scenarios, but add another statement saying indicating that if the SDK already ran, they might see the item again later.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1175,6 +1175,7 @@
   "Please select the same file from the initial upload.": "Please select the same file from the initial upload.",
   "Cancel upload": "Cancel upload",
   "Cancel and remove the selected upload?": "Cancel and remove the selected upload?",
+  "If the file has been fully uploaded and already being processed, it might still appear in your Uploads list later.": "If the file has been fully uploaded and already being processed, it might still appear in your Uploads list later.",
   "Select the file to resume upload...": "Select the file to resume upload...",
   "Stopped.": "Stopped.",
   "Resume": "Resume",
