(patch) Port membership strings for earlier translation

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2487,6 +2487,14 @@
   "Membership": "Membership",
   "You are a \"%membership_tier_name%\" member": "You are a \"%membership_tier_name%\" member",
   "Odysee Perks": "Odysee Perks",
+  "Access to members-only content": "Access to members-only content",
+  "Access to members-only livestreams": "Access to members-only livestreams",
+  "Access to members-only chat": "Access to members-only chat",
+  "Badge shown in chat": "Badge shown in chat",
+  "Exclusive content": "Exclusive content",
+  "Exclusive livestreams": "Exclusive livestreams",
+  "Members-only chat": "Members-only chat",
+  "Member badge": "Member badge",
   "This membership will renew on %renewal_date%": "This membership will renew on %renewal_date%",
   "Confirm %membership_name% Cancellation": "Confirm %membership_name% Cancellation",
   "Are you sure you want to cancel your %creator_name%'s \"%membership_name%\" membership? You will still have all your features until %end_date% at which point your purchase will not be renewed and you will lose access to your membership features and perks.": "Are you sure you want to cancel your %creator_name%'s \"%membership_name%\" membership? You will still have all your features until %end_date% at which point your purchase will not be renewed and you will lose access to your membership features and perks.",
@@ -2536,6 +2544,8 @@
   "You don't have any Tiers": "You don't have any Tiers",
   "To be able to begin receiving payments you have to add at least 1 Tier to your channel.": "To be able to begin receiving payments you have to add at least 1 Tier to your channel.",
   "Add a Tier": "Add a Tier",
+  "Bank Account Status": "Bank Account Status",
+  "To be able to begin receiving payments you must connect a Bank Account first.": "To be able to begin receiving payments you must connect a Bank Account first.",
   "Channel Has No Memberships": "Channel Has No Memberships",
   "Unfortunately you haven't activated your memberships functionality for this channel yet, but you can do so now at the link below.": "Unfortunately you haven't activated your memberships functionality for this channel yet, but you can do so now at the link below.",
   "Create Memberships For %channel_name%": "Create Memberships For %channel_name%",
@@ -2545,7 +2555,6 @@
   "Description of your tier": "Description of your tier",
   "Monthly Contribution ($/Month)": "Monthly Contribution ($/Month)",
   "Save Tier": "Save Tier",
-  "A membership description is required.": "A membership description is required.",
   "This channel has no supporters yet": "This channel has no supporters yet",
   "Once you have supporters, they will appear here.": "Once you have supporters, they will appear here.",
   "You're not able to signup for your own memberships": "You're not able to signup for your own memberships",
@@ -2562,5 +2571,16 @@
   "Only channel members with \"Members-only chat\" perk can participate in public livestream chats.": "Only channel members with \"Members-only chat\" perk can participate in public livestream chats.",
   "Cancel membership": "Cancel membership",
   "Cancel Membership": "Cancel Membership",
+  "This Tier does not grant you access to the currently selected content.": "This Tier does not grant you access to the currently selected content.",
+  "A membership name is required.": "A membership name is required.",
+  "A membership description is required.": "A membership description is required.",
+  "This membership has subscribers, you can't update the price currently.": "This membership has subscribers, you can't update the price currently.",
+  "Price must be greater or equal than %min%.": "Price must be greater or equal than %min%.",
+  "Price must be lower or equal than %max%.": "Price must be lower or equal than %max%.",
+  "A price is required.": "A price is required.",
+  "Find creators that you like and support them. Your pledges will show up on this page.": "Find creators that you like and support them. Your pledges will show up on this page.",
+  "Only channel members can view this content": "Only channel members can view this content",
+  "You don't have any channels": "You don't have any channels",
+  "To be able to begin receiving payments you have to have at least 1 channel.": "To be able to begin receiving payments you have to have at least 1 channel.",
   "--end--": "--end--"
 }
