--- a/.env.defaults
+++ b/.env.defaults
@@ -4,7 +4,7 @@
 
 # --- Minimum Version (Format: YYYYMMDDNNN) ---
 # Bump this when we want to nudge the user to refresh.
-MINIMUM_VERSION=20220825001
+MINIMUM_VERSION=20220929001
 
 # This is 'false' in the production instances:
 IGNORE_MINIMUM_VERSION=true
@@ -18,7 +18,7 @@ WEB_SERVER_PORT=1337
 LBRY_WEB_API=https://api.na-backend.odysee.com
 LBRY_WEB_PUBLISH_API=https://publish.na-backend.odysee.com/v1
 LBRY_WEB_PUBLISH_API_V2=https://publish.na-backend.odysee.com/api/v2/publish/
-LBRY_WEB_PUBLISH_API_V3=https://api.na-backend.odysee.com/api/v3/publish/
+LBRY_WEB_PUBLISH_API_V3=https://publish.na-backend.odysee.com/api/v3/publish/
 LBRY_WEB_BUFFER_API=https://collector-service.api.lbry.tv/api/v1/events/video
 LBRY_API_URL=https://api.odysee.com
 COMMENT_SERVER_API=https://comments.odysee.tv/api/v2
