Move all the dependencies back to devDependencies.

--- a/package.json
+++ b/package.json
@@ -39,8 +39,20 @@
     "postinstall": "electron-builder install-app-deps && node ./build/downloadDaemon.js",
     "postinstall:warning": "echo '\n\nWARNING\n\nNot all node modules were installed because NODE_ENV is set to \"production\".\nThis should only be set after installing dependencies with \"yarn\". The app will not work.\n\n'"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.2.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-flow": "^7.12.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "@datapunt/matomo-tracker-js": "^0.1.4",
     "@electron/remote": "^2.0.1",
     "@emotion/react": "^11.10.4",
@@ -55,31 +67,71 @@
     "@reach/tooltip": "^0.12.1",
     "@reach/utils": "^0.12.1",
     "@sentry/browser": "^5.12.1",
+    "@sentry/webpack-plugin": "^1.10.0",
+    "@types/three": "^0.103.2",
     "@ungap/from-entries": "^0.2.1",
     "adm-zip": "^0.4.13",
     "auto-launch": "^5.0.5",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "babel-plugin-import-glob": "^2.0.0",
+    "babel-plugin-transform-imports": "^1.5.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "chalk": "^4.1.0",
     "classnames": "^2.2.5",
     "codemirror": "^5.39.2",
     "connected-react-router": "^6.8.0",
+    "copy-webpack-plugin": "^6.4.1",
     "country-data": "^0.0.31",
+    "cross-env": "^7.0.3",
     "crypto-js": "^4.0.0",
     "css-doodle": "^0.7.1",
+    "css-loader": "^2.1.0",
+    "cssnano": "^4.1.10",
     "dat.gui": "^0.7.2",
     "decompress": "^4.2.1",
     "del": "^3.0.0",
+    "devtron": "^1.4.0",
     "dotenv-defaults": "^2.0.1",
+    "dotenv-webpack": "^1.8.0",
+    "electron": "17.0.0",
+    "electron-builder": "^22.10.5",
+    "electron-devtools-installer": "^3.1.1",
     "electron-dl": "^3.2.0",
+    "electron-is-dev": "^0.3.0",
     "electron-log": "^4.4.8",
     "electron-notarize": "^1.0.0",
     "electron-updater": "^4.2.4",
+    "electron-webpack": "^2.8.2",
+    "electron-window-state": "^4.1.1",
     "emoji-dictionary": "^1.0.11",
+    "eslint": "^5.15.2",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-jsx": "^6.0.2",
+    "eslint-import-resolver-webpack": "^0.11.0",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint-plugin-standard": "^4.0.1",
     "express": "^4.17.1",
+    "file-loader": "^4.2.0",
+    "flow-bin": "^0.97.0",
+    "flow-typed": "^3.7.0",
     "formik": "^0.10.4",
     "hast-util-sanitize": "^3.0.2",
     "history": "^4.9.0",
     "humanize-duration": "^3.27.0",
+    "husky": "^3.1.0",
     "imagesloaded": "^4.1.4",
+    "json-loader": "^0.5.4",
+    "lint-staged": "^7.0.2",
     "localforage": "^1.7.1",
     "lodash-es": "^4.17.21",
     "mammoth": "^1.4.16",
@@ -88,11 +140,19 @@
     "moment": "^2.29.2",
     "node-fetch": "^2.6.7",
     "node-html-parser": "^5.1.0",
+    "node-loader": "^0.6.0",
     "node-wget": "^0.4.3",
+    "nodemon": "^1.19.1",
     "parse-duration": "^1.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-rtl": "^1.7.3",
+    "preprocess-loader": "^0.3.0",
+    "prettier": "^2.2.1",
     "prop-types": "^15.6.2",
     "proxy-polyfill": "0.1.6",
     "qrcode.react": "^0.8.0",
+    "raw-loader": "^2.0.0",
     "rc-progress": "^2.0.6",
     "re-reselect": "^4.0.0",
     "react": "^16.8.2",
@@ -122,84 +182,22 @@
     "remark-frontmatter": "^2.0.0",
     "remark-react": "^8.0.0",
     "reselect": "^4.0.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
+    "source-map-explorer": "^2.5.2",
     "strip-markdown": "^3.0.3",
+    "style-loader": "^0.23.1",
     "sudo-prompt": "^9.2.1",
     "tempy": "^0.6.0",
+    "terser-webpack-plugin": "^4.2.3",
     "three-full": "^28.0.2",
     "unist-util-visit": "^2.0.3",
     "uuid": "^8.3.2",
     "video.js": "^7.14.3",
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-event-tracking": "^1.0.1",
-    "villain-react": "^1.0.9"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.3.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.2.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-flow": "^7.12.1",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@sentry/webpack-plugin": "^1.10.0",
-    "@types/three": "^0.103.2",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-add-module-exports": "^1.0.4",
-    "babel-plugin-import-glob": "^2.0.0",
-    "babel-plugin-transform-imports": "^1.5.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "copy-webpack-plugin": "^6.4.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^2.1.0",
-    "cssnano": "^4.1.10",
-    "devtron": "^1.4.0",
-    "dotenv-webpack": "^1.8.0",
-    "electron": "17.0.0",
-    "electron-builder": "^22.10.5",
-    "electron-devtools-installer": "^3.1.1",
-    "electron-is-dev": "^0.3.0",
-    "electron-webpack": "^2.8.2",
-    "electron-window-state": "^4.1.1",
-    "eslint": "^5.15.2",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-jsx": "^6.0.2",
-    "eslint-import-resolver-webpack": "^0.11.0",
-    "eslint-plugin-flowtype": "^2.46.1",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "file-loader": "^4.2.0",
-    "flow-bin": "^0.97.0",
-    "flow-typed": "^3.7.0",
-    "husky": "^3.1.0",
-    "json-loader": "^0.5.4",
-    "lint-staged": "^7.0.2",
-    "node-loader": "^0.6.0",
-    "nodemon": "^1.19.1",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-rtl": "^1.7.3",
-    "preprocess-loader": "^0.3.0",
-    "prettier": "^2.2.1",
-    "raw-loader": "^2.0.0",
-    "sass": "^1.29.0",
-    "sass-loader": "^7.1.0",
-    "source-map-explorer": "^2.5.2",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^4.2.3",
+    "villain-react": "^1.0.9",
     "webpack": "^4.44.2",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.3.10",
